# my_openGL_proj

./: CMakeLists.txt
src/: config.cpp  config.h  glad.c  glad.h  linear_algebros.cpp  linear_algebros.h  main.cpp  material.cpp  material.h  triangle_mesh.cpp
src/shaders/: fragment.txt  vertex.txt
